// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/backstage/components/BackstageList Should match snapshot with browsing hint 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="backstage-content"
      >
        <div
          class="backstage-header"
        >
          <h1>
            Installed Incoming Webhooks
          </h1>
        </div>
        <div
          class="backstage-filters"
        >
          <div
            class="backstage-filter__search"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
            <input
              class="form-control"
              id="searchInput"
              placeholder="Search"
              style="flex-grow: 0; flex-shrink: 0;"
              type="search"
              value=""
            />
          </div>
        </div>
        <span
          class="backstage-list__hint"
        >
          Search by title of the webhook or by associated channel. Examples: "My Webhook Title", "town-square", or "Town Square".
        </span>
        <span
          class="backstage-list__help"
        />
        <div
          class="backstage-list"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="backstage-content"
    >
      <div
        class="backstage-header"
      >
        <h1>
          Installed Incoming Webhooks
        </h1>
      </div>
      <div
        class="backstage-filters"
      >
        <div
          class="backstage-filter__search"
        >
          <i
            class="fa fa-search"
            title="Search Icon"
          />
          <input
            class="form-control"
            id="searchInput"
            placeholder="Search"
            style="flex-grow: 0; flex-shrink: 0;"
            type="search"
            value=""
          />
        </div>
      </div>
      <span
        class="backstage-list__hint"
      >
        Search by title of the webhook or by associated channel. Examples: "My Webhook Title", "town-square", or "Town Square".
      </span>
      <span
        class="backstage-list__help"
      />
      <div
        class="backstage-list"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components/backstage/components/BackstageList Should match snapshot without browsing hint 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="backstage-content"
      >
        <div
          class="backstage-header"
        >
          <h1>
            Installed Incoming Webhooks
          </h1>
        </div>
        <div
          class="backstage-filters"
        >
          <div
            class="backstage-filter__search"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
            <input
              class="form-control"
              id="searchInput"
              placeholder="Search"
              style="flex-grow: 0; flex-shrink: 0;"
              type="search"
              value=""
            />
          </div>
        </div>
        <span
          class="backstage-list__hint"
        />
        <span
          class="backstage-list__help"
        />
        <div
          class="backstage-list"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="backstage-content"
    >
      <div
        class="backstage-header"
      >
        <h1>
          Installed Incoming Webhooks
        </h1>
      </div>
      <div
        class="backstage-filters"
      >
        <div
          class="backstage-filter__search"
        >
          <i
            class="fa fa-search"
            title="Search Icon"
          />
          <input
            class="form-control"
            id="searchInput"
            placeholder="Search"
            style="flex-grow: 0; flex-shrink: 0;"
            type="search"
            value=""
          />
        </div>
      </div>
      <span
        class="backstage-list__hint"
      />
      <span
        class="backstage-list__help"
      />
      <div
        class="backstage-list"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
